<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Purple"
    tools:context=".MealItemDetail">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodImageDetail"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/titleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_placeholder"
        android:textColor="@color/Gold"
        android:textStyle="bold"

        android:background="@color/Black"
        android:padding="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_below="@id/foodImageDetail"
        style="@style/MealTitle"/>

    <TextView
        android:id="@+id/descriptionDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:padding="8dp"
        android:background="@color/Purple"
        style="@style/MealDetailText"
        android:textColor="@color/Gold"
        android:layout_below="@id/titleDetail"/>
    <TextView
        android:id="@+id/ingredientsDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:padding="8dp"
        android:background="@color/Purple"
        style="@style/MealDetailText"
        android:layout_below="@id/descriptionDetail"
        android:textColor="@color/Gold"/>
    <TextView
        android:id="@+id/caloriesDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:padding="8dp"
        android:background="@color/Purple"
        style="@style/MealDetailText"
        android:layout_below="@id/ingredientsDetail"
        android:textColor="@color/Gold"/>
    <TextView
        android:id="@+id/webLinkDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/webLink"
        android:padding="8dp"
        android:background="@color/Purple"
        style="@style/MealDetailText"
        android:layout_below="@id/caloriesDetail"
        android:textColor="@color/Gold"/>

</RelativeLayout>